--- a/UFO-level-2/static/css/style.css
+++ b/UFO-level-2/static/css/style.css
@@ -37,8 +37,12 @@ label {
   margin: 10px;
 }
 
-.btn {
-  margin: 10px;
+.reset {
+  margin-bottom: 10px;
+}
+
+.btn-default {
+  margin-left: 10px;
 }
 
 .form-group {
